Added SCV project

--- a/html/index.html
+++ b/html/index.html
@@ -33,10 +33,10 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <h1>Matthew Braun</h1>
     <p>Computer Engineer | Software Developer</p>
-    <a href="https://github.com/yourgithub" target="_blank">GitHub</a> | 
-    <a href="https://www.linkedin.com/in/yourlinkedin/" target="_blank">LinkedIn</a>
+    <a href="https://github.com/mjbraun95" target="_blank">GitHub</a> | 
+    <a href="https://www.linkedin.com/in/matthewbraun4/" target="_blank">LinkedIn</a>
   </header>
   
   <section id="about">
